--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,19 @@
+Makefile
 Makefile.in
 aclocal.m4
 autom4te.cache
 autoscan.log
+config.guess
+config.h
+config.h.in~
 config.log
 config.status
+config.sub
 configure
+depcomp
 install-sh
+libtool
+ltmain.sh
+m4
 missing
+stamp-h1
