pkg-config and autogen

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,11 @@
 AUTOMAKE_OPTIONS = foreign
+
+# libtoolize told me to add this
+ACLOCAL_AMFLAGS = -I m4
+
 SUBDIRS = scopemm demos
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = scopemm-1.0.pc
+
+EXTRA_DIST=autogen.sh
