more automake stuff

--- a/demos/Makefile.am
+++ b/demos/Makefile.am
@@ -1,21 +1,24 @@
-INCLUDES = -I$(top_srcdir)
+AM_CPPFLAGS = -Wall -Wextra -I$(top_srcdir)
 LDADD = $(top_srcdir)/scopemm/.libs/libscopemm-1.0.a
 
-INCLUDES += $(GTKMM_CFLAGS)
+AM_CPPFLAGS += $(GTKMM_CFLAGS)
 LDADD += $(GTKMM_LIBS)
 
 noinst_PROGRAMS = demo-mouse demo-raster demo-simple demo-stl
-# FIXME - detect blitz
-#bin_PROGRAMS += demo-blitz-raster demo-blitz
 
 demo_mouse_SOURCES = demo-mouse.cc
-
 demo_raster_SOURCES = demo-raster.cc
-
 demo_simple_SOURCES = demo-simple.cc
-
 demo_stl_SOURCES = demo-stl.cc
 
-#demo_blitz_raster_SOURCES = demo-blitz-raster.cc
+if HAVE_BLITZ
+noinst_PROGRAMS += demo-blitz-raster demo-blitz
 
-#demo_blitz_SOURCES = demo-blitz.cc
+demo_blitz_raster_SOURCES = demo-blitz-raster.cc
+demo_blitz_raster_LDADD = $(LDADD) $(BLITZ_LIBS)
+demo_blitz_raster_CPPFLAGS = $(AM_CPPFLAGS) $(BLITZ_CFLAGS)
+
+demo_blitz_SOURCES = demo-blitz.cc
+demo_blitz_LDADD = $(LDADD) $(BLITZ_LIBS)
+demo_blitz_CPPFLAGS = $(AM_CPPFLAGS) $(BLITZ_CFLAGS)
+endif
