--- a/scopemm/Makefile.am
+++ b/scopemm/Makefile.am
@@ -4,6 +4,8 @@ LDADD =
 AM_CPPFLAGS += $(GTKMM_CFLAGS)
 LDADD += $(GTKMM_LIBS)
 
+AM_CPPFLAGS += $(BOOST_CPPFLAGS)
+
 h_sources = affine.h axeslayer.h bbox.h grid.h layerimpl.h lineplot.h mouseadapter.h plotcanvas.h rastercanvas.h scopemm.h
 cc_sources = affine.cc axeslayer.cc grid.cc lineplot.cc mouseadapter.cc plotcanvas.cc rastercanvas.cc
 
