--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,11 @@ depcomp
 install-sh
 libtool
 ltmain.sh
-m4
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
 missing
 scopemm-1.0.0.tar.gz
 scopemm-1.0.pc
