cppcheck/lint fixes

--- a/scopemm/Makefile.am
+++ b/scopemm/Makefile.am
@@ -19,3 +19,15 @@ library_include_HEADERS = $(h_sources)
 lib_LTLIBRARIES = libscopemm-1.0.la
 libscopemm_1_0_la_SOURCES= $(h_sources) $(cc_sources)
 libscopemm_1_0_la_LDFLAGS= -version-info $(LIBRARY_VERSION) -release $(PACKAGE_RELEASE)
+
+cppcheck:
+	cppcheck $(DEFAULT_INCLUDES) $(INCLUDES) --template gcc --enable=all -q -i attic/ .
+
+lint:
+	cpplint.py --filter=-whitespace,-readability/streams,-build/header_guard,-build/include_order,-readability/multiline_string \
+	*.cc *.h 2>&1 \
+	| grep -v 'Include the directory when naming .h files' \
+	| grep -v 'Is this a non-const reference' \
+	| grep -v 'Do not use namespace using-directives.' \
+	| grep -v 'Use static_cast' \
+	| grep -v 'Done processing '
